# simple-agent

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  openai.test.py  pyproject.toml
Kavak-collections/: .env.example  bruno.json  health.bru  login.bru
Kavak-collections/cars/: create car.bru  create cars - bulk.bru  delete car by id.bru  get all with filters.bru  get car by id.bru  update car.bru
Kavak-collections/chat/: send message.bru
Kavak-collections/embeddings/: folder.bru  get embeddings.bru  scrape url.bru
Kavak-collections/environments/: dev.bru
Kavak-collections/financing/: calculate.bru  folder.bru
scripts/: init_db.sql  load_catalog.py  load_catalog_api.py
src/: config.py  main.py
src/database/: connection.py  models.py
src/dependencies/: auth.py
src/middleware/: auth_middleware.py  logging_middleware.py
src/repositories/: car_repository.py  embedding_repository.py
src/routers/: __init__.py  auth.py  cars.py  chat.py  embeddings.py  financing.py
src/schemas/: auth.py  car.py  chat.py  embedding.py  financing.py
src/services/: auth_service.py  car_service.py  embedding_service.py  financing_service.py  message_processor.py  message_queue.py  scraping_service.py  twilio_service.py
src/services/agent/: chat_service.py  langchain_tools.py  llm_service.py  memory_manager.py
src/utils/: csv_loader.py  text_processing.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
terraform/modules/bastion/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/test_agent/: test_chat_service_integration.py
tests/integration/test_routers/: test_cars_router.py  test_chat_router.py  test_embeddings_router.py  test_financing_router.py
tests/unit/test_agent/: test_langchain_tools.py  test_memory_manager.py
tests/unit/test_repositories/: test_car_repository.py
tests/unit/test_services/: test_car_service.py  test_embedding_service.py  (+5 more)
(+1 files in other folders)
