[project]
name = "kavak-agent"
version = "0.1.0"
description = "Bot comercial de Kavak con integración WhatsApp y LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "openai>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "twilio>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "thefuzz>=0.22.0",
    "python-multipart>=0.0.6",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.5",
    "langgraph>=0.2.0",
    "pytest>=9.0.2",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "jose>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "faker>=22.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
